--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -91,7 +91,7 @@
                 
             <div class="phistory-head">
               <div class="lbl-details">Medications</div>
-              <div class="add-medication" ><a href="{% url "report" %}"><h4><i class="bi bi-printer-fill"></i></h4></a></div>
+              <div class="add-medication" ><a href="{% url "report" patient_record.id %}"><h4><i class="bi bi-printer-fill"></i></h4></a></div>
             </div>
 
             
