--- a/website/templates/pdfreport.html
+++ b/website/templates/pdfreport.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <title>Bootstrap demo</title>
+  <title>Print</title>
   <link
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
   rel="stylesheet"
@@ -14,7 +14,7 @@
   <style>
     @page {
       size: letter portrait;
-      margin: 1cm 1cm;
+      margin: 1cm 1.5cm;
 
       @frame header_frame {
         /* Static Frame */
@@ -146,6 +146,7 @@
     </tr>  
 
   </table>
+  
     
 
   <br>
@@ -157,8 +158,8 @@
     <thead >      
       <tr style="border-top: 1px solid black;padding: 1px;padding:2px;" >
       <th rowspan="2">QUANTITY</th>
-      <th style="word-wrap:break-word;" rowspan="2">MEDICATION/<br>PREPARATION</th>
-      <th rowspan="2">DOSAGE</th>
+      <th style="word-wrap:break-word;" rowspan="2" colspan="5">MEDICATION/<br>PREPARATION</th>
+      <th rowspan="2" colspan="3">DOSAGE</th>
       <th colspan="3">SCHEDULE OF INTAKE</th>
       </tr>
       <tr style="border-bottom: 1px solid black;" >
@@ -173,8 +174,8 @@
         {% if forloop.last %}
         <tr style="border-bottom: 1px solid black;" >
             <td align ="center">{{a.quantity}}</td>
-            <td align ="center">{{a.medicine_name}}</td>
-            <td align ="center">{{a.dosage}}</td>
+            <td colspan="5" align ="center">{{a.medicine_name}}</td>
+            <td colspan="3" align ="center">{{a.dosage}}</td>
             <td align ="center">{{a.morning}}</td>
             <td align ="center">{{a.noon}}</td>
             <td align ="center">{{a.evening}}</td>
@@ -182,8 +183,8 @@
         {% else %}
         <tr >
             <td align ="center">{{a.quantity}}</td>
-            <td align ="center">{{a.medicine_name}}</td>
-            <td align ="center">{{a.dosage}}</td>
+            <td colspan="5" align ="center">{{a.medicine_name}}</td>
+            <td colspan="3" align ="center">{{a.dosage}}</td>
             <td align ="center">{{a.morning}}</td>
             <td align ="center">{{a.noon}}</td>
             <td align ="center">{{a.evening}}</td>
@@ -195,13 +196,9 @@
    
   </table>  
 
-
-
-  {% comment %} <label>Date: _______________________________</label><br style="margin-bottom:20px;">
-  <label>Patient Name: _______________________________</label> &nbsp &nbsp &nbsp &nbsp
-  <label>Age: _______________________________</label> {% endcomment %}
-
-
+ <p style="font-size:12px;margin-top:30px"> <b> Note:</b> <i>Report to us if any allergic/undesirable side effects of any medication, ASAP</i></p>
+<p style="font-size:12px;margin-top:50px">YOUR NEXT APPOINTMENT: <br>________________________<br>________________________</p>
+<p  style="font-size:12px;margin-left:450px"><b>&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp<img align="center" src="{{static_url}}\doctorsignature.png" width="100px" height="100px"></img><br>ZERNAN S. LABAGUIS, MD FPNA</b><br>PRC:  90136<br>PTR:  0851827</p>
 </body>
 
 </html>
