--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -40,10 +40,17 @@
   </head>
   <body>
 
+   <div class=" header-base">
+      <div>
+        <img src="{% static "logo.png" %}" width="50px">
+        <img src="{% static "logo2.jpg" %}" width="50px">
+      <span class="logotitle"><b>LABAGUIS</b></span> <strong style="color:black;">Neuro Clinic and Nuerocare Pharmacy</strong> </div>
+    </div>
+
     <!--NavBar-->
     {% include 'navbar.html' %}
 
-    <div class="title-container">
+    <div class=" header-main2">
       <i class="bi bi-prescription2"></i>Patients Records Management System
     </div>
      
