--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -14,7 +14,7 @@
   <div class="reg-area">
     <form method="POST">
       {% csrf_token %}
-    <div class="title-form bg-gradient">Add Medicines</div>
+    <div class="title-form">Add Medicines</div>
     <div class="reg-row">
         <div class="medicine-col">
           <label class="reg-label">Medicine Name</label><br />
@@ -38,7 +38,7 @@
 
 <!--Table container-->
 <div class="container3">
-  <div class="table-title bg-gradient">Medicine List</div>
+  <div class="table-title">Medicine List</div>
   <div class="table-box">
     
     
