--- a/website/templates/newpatient.html
+++ b/website/templates/newpatient.html
@@ -1,4 +1,4 @@
-<div class="title-form bg-gradient">Add New Patient</div>
+<div class="title-form ">Add New Patient</div>
 <form method="POST">
     {% csrf_token %}
 <div class="form-fields">
