--- a/website/templates/patientlist.html
+++ b/website/templates/patientlist.html
@@ -16,7 +16,7 @@
 
     <!--Table container-->
     <div class="container2">
-      <div class="table-title bg-gradient">Patient List</div>
+      <div class="table-title">Patient List</div>
       <div class="table-box">
         {% include 'patientstable.html' %}
       </div>
