--- a/website/templates/sidemenu.html
+++ b/website/templates/sidemenu.html
@@ -1,7 +1,7 @@
 
     <!--Left Menus-->
     <div class="left-menu">
-      <div class="active-title bg-gradient">Patient Records</div>
+      <div class="active-title">Patient Records</div>
       <a href="{% url "patientlist" %}">Patient List</a><hr>
       <a href="{% url "medications" %}">Medicine List</a><hr>
       <a href="#">Prescriptions</a> 
