--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,4 +1,5 @@
-<header class="nav-bar">
+{% comment %} <header class="nav-bar">
+   
     <a href="{% url "patientlist" %}"><strong class="logo-text">LNCRMS</strong></a>
     <nav>
         <ul class="nav-links">
@@ -9,4 +10,33 @@
         </ul>
     </nav>
     <a href="{% url 'logoutuser' %}"><button class="logout-btn">Logout</button></a>
-</header>
+</header> {% endcomment %}
+
+<div class="header-main">
+    <nav class="navbar navbar-dark navbar-expand-md">
+        <div class="container-fluid">
+         
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item ">
+                <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url "patientlist" %}">Patients</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "medications" %}">Medicines</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Settings</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+        <a class="nav-item nav-link navbar-nav" style="margin-right:10px;" href="#">Logout</a>
+      </nav>
+</div>
