--- a/website/templates/patientstable.html
+++ b/website/templates/patientstable.html
@@ -25,7 +25,7 @@
           <td>
             <a href="{% url 'patientinfo' x.id %}" id="link-view"><i class="bi bi-eye"></i></a>
             
-            <a href="#" id="link-delete"><i class="bi bi-trash3"></i></a>
+            <a href="{% url 'deletepatient' x.id %}" id="link-delete"><i class="bi bi-trash3"></i></a>
           </td>          
         </tr>
         {% endfor %}
