--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -1,8 +1,11 @@
 {% extends 'index.html' %}
 {% load custom_tags %}
+
+
+{% block pagetitle %}Patients Information{% endblock pagetitle %}
 {% block content %}
 
-{% comment %} <div class="title-form bg-gradient">Patient Information</div> {% endcomment %}
+
 
 <div class="info-row1">
   <div class="col1-info">
