--- a/website/static/style.css
+++ b/website/static/style.css
@@ -517,6 +517,8 @@ input, textarea, select{
     background-color: rgb(250, 255, 189,0.2);
     padding: auto;
     font-family: 'Arial';
+    margin: 5px 0 5px 0;
+    padding: 5px 0 5px 0;
 }
 
 #table-medications{
