--- a/website/templates/patientstable.html
+++ b/website/templates/patientstable.html
@@ -24,7 +24,7 @@
           <td>{{x.created_at}}</td>
           <td>
             <a href="{% url 'patientinfo' x.id %}" id="link-view"><i class="bi bi-eye"></i></a>
-            
+            <a href="{% url 'editpatient' x.id %}" id="link-edit"><i class="bi bi-pencil-square"></i></a>
             <a href="{% url 'deletepatient' x.id %}" id="link-delete"><i class="bi bi-trash3"></i></a>
           </td>          
         </tr>
