--- a/website/templates/editpatient.html
+++ b/website/templates/editpatient.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% block pagetitle %}Edit Patient{% endblock pagetitle %}
+
 {% block content%}
 
 <!--<div class="title-tab bg-gradient">Patient List</div>-->
