--- a/website/templates/tables/medicalhistorytb.html
+++ b/website/templates/tables/medicalhistorytb.html
@@ -23,13 +23,11 @@
     {{pHistoryForm.diagnosis}}
 
 
-    {{form.name.label_tag}}
-    {{form.name}}
-    {{form.fileattachments}}
+    
 
     
 
-    <input type='submit' name='saveattachments'>
+    <button class="btn btn-success w-100 mt-2"  type='submit' name='saveattachments'>Save</button>
 </form>
 </div>
     {% endblock content1 %}
