--- a/website/templates/medicalhistoryinfo.html
+++ b/website/templates/medicalhistoryinfo.html
@@ -7,44 +7,48 @@
     <h4 style="color:black;"><i class="bi bi-arrow-left-square-fill"></i></h4>
 </a>{% endblock btn-back %}
 {% block title %}
-<div class="lbl-details">Patient History Details</div>
+<div class="lbl-details "><h3>Patient History Details &nbsp<a href="{% url "editmedicalhistory" pID patient_history.id  %}"><i class="bi iconcolor bi-pencil-square"></i></a></h3></div>
 
 {% endblock title %}
 {% block content1 %}
 
-<div class="add_medicalhistorytable card">
-    <label class="lbl-pname2">CONSULTATION DATE/TIME</label><br />
+<div class="add_medicalhistorytable">
+    <label class="lbl-pname">CONSULTATION DATE/TIME</label><br />
     <label class="value-pname">{{patient_history.created_at}} </label>
 </div>
 
-<div class="add_medicalhistorytable  card">
-    <label class="lbl-pname2">DIAGNOSIS</label><br />
+<div class="add_medicalhistorytable">
+    <label class="lbl-pname">DIAGNOSIS</label><br />
     <label class="value-pname">{{patient_history.diagnosis}} </label>
 </div>
 
-<div class="add_medicalhistorytable  card">
-    <label class="lbl-pname2">REMARKS</label><br />
+<div class="add_medicalhistorytable">
+    <label class="lbl-pname">REMARKS</label><br />
     <label class="value-pname">{{patient_history.remarks}} </label>
 </div>
-
+<hr>
 <div class="medicalhistorytable">
      <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#add_attachments">Add attachments</button>
     
     <table id="table-medications" class="table table-sm table-bordered">
-        <thead class="table-primary">
+        <thead class="table-success">
           <th colspan="2">Attachments</th>
         </thead>
         <tbody>
+            {% if patient_history_attachments %}
             {% for a in  patient_history_attachments%}
             <tr>
                 <td>{{a.name}}</td>
-                <td><img src="{{a.fileattachments.url}}" width="200"></img>
-                  <a class="btn-link" id="link-view" type="button" href="{{a.fileattachments.url}}" target="_blank">
-                    open
+                <td><img src="{{a.fileattachments.url}}" width="50"></img>
+                  <a class="" id="link-view" type="button" href="{{a.fileattachments.url}}" target="_blank">
+                    open attachment
                     </a>
                   </td>
             </tr>
             {% endfor %}
+            {% else %}
+            no attachements
+            {% endif %}
         </tbody>
         </table>
        
