--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -78,14 +78,21 @@
                 {% Medhistory patient_record.patient_code as records %}
                 <table id="table-medications" class="table table-sm table-bordered">
                   <thead class="table-success">
-                    <th>Medical History</th>
-                    <th>Date/Time Consulted</th>
+                    <th colspan="5" width="65%">Medical History</th>
+                    <th colspan="1">Date/Time Consulted</th>
+                    <th colspan="1">Actions</th>
                 </thead>
                 
                 {% for record in records %}
                 <tr>
-                <td>{{record.remarks}} &nbsp <a class="link link-info" href="{% url "medicalhistoryinfo" patient_record.id record.id%}">View</a></td>
-                <td>{{record.created_at}}</td>
+                <td colspan="5" width="65%">{{record.remarks}}
+                  
+                  </td>
+                <td colspan="1">{{record.created_at}}</td>
+                <td colspan="1">
+                  &nbsp <a class="link link-info" href="{% url "medicalhistoryinfo" patient_record.id record.id%}">View</a>
+                  &nbsp <a class="link link-danger" href="{% url "deletemedicalhistory" patient_record.id record.id%}">Delete</a>
+                </td>
                 </tr>
                 {% endfor %}             
                 </table>
