--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -93,6 +93,7 @@
     <script>
       $("#patienttable").DataTable({})
       $("#medicine-table").DataTable({})
+      $("#consultation-table").DataTable({})
     
     </script>
   </body>
