--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -12,8 +12,8 @@
     <a href="{% url 'logoutuser' %}"><button class="logout-btn">Logout</button></a>
 </header> {% endcomment %}
 
-<div class="header-main">
-    <nav class="navbar navbar-dark navbar-expand-md">
+<div class="header-main ">
+    <nav class="navbar navbar-dark navbar-expand-md ">
         <div class="container-fluid">
          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+                <a class="nav-link active" aria-current="page" href="{% url "dashboard" %}">Dashboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " href="{% url "patientlist" %}">Patients</a>
@@ -37,6 +37,6 @@
             </ul>
           </div>
         </div>
-        <a class="nav-item nav-link navbar-nav" style="margin-right:10px;" href="#">Logout</a>
+        <a class="nav-item nav-link navbar-nav" style="margin-right:10px;" href="{% url "logoutuser" %}">Logout</a>
       </nav>
 </div>
