--- a/website/templates/dashboard.html
+++ b/website/templates/dashboard.html
@@ -35,7 +35,7 @@
       <div class="container4">
       
         <div class="table-box2">
-            <h4 style="color:#2ea86d;padding-top:10px;">Patients</h4>
+           <div class="adds"> <h4 style="color:#2ea86d;padding-top:10px;">Patients &nbsp&nbsp&nbsp</h4><h4 style="color:#2ea86d;padding-top:10px;padding-right:10px;"><a id="addpatients" href="{% url "patientlist" %}"><i class="bi bi-plus-circle-fill"></i></a></h4></div>
             <hr><br>
           {% include 'patientstable.html' %}
         </div>
@@ -46,7 +46,7 @@
             <h4 style="color:#2ea86d">Consultations</h4>
             <hr><br>
 
-            <table id="consultation-table" class="patient-table">
+            <table id="consultation-table" class="patient-table table-striped ">
                 <thead class="table-success">
                     <th>Patient Number</th>
                     <th>Remarks</th>
