--- a/website/templates/pdfreport.html
+++ b/website/templates/pdfreport.html
@@ -198,7 +198,7 @@
 
  <p style="font-size:12px;margin-top:30px"> <b> Note:</b> <i>Report to us if any allergic/undesirable side effects of any medication, ASAP</i></p>
 <p style="font-size:12px;margin-top:50px">YOUR NEXT APPOINTMENT: <br>________________________<br>________________________</p>
-<p  style="font-size:12px;margin-left:450px"><b>&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp<img align="center" src="{{static_url}}\doctorsignature.png" width="100px" height="100px"></img><br>ZERNAN S. LABAGUIS, MD FPNA</b><br>PRC:  90136<br>PTR:  0851827</p>
+<p  style="font-size:12px;margin-left:450px"><b>&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp&nbsp &nbsp<img src="{{static_url}}{{signature}}" width="100px" height="100px"></img><br>ZERNAN S. LABAGUIS, MD FPNA</b><br>PRC:  90136<br>PTR:  0851827</p>
 </body>
 
 </html>
