--- a/website/templates/pdfreport.html
+++ b/website/templates/pdfreport.html
@@ -134,7 +134,7 @@
 
   <table class="tblpatientdetails">
     <tr>     
-      <td>Date : </td>      
+      <td>Date/Time&nbsp &nbsp &nbsp  : <b>{{datetimevalue}}</b></td>      
     </tr> 
     <tr>
       <td>Patient Name : <b> {{patient_record.last_name}}, {{patient_record.first_name}} {{patient_record.middle_name}}</b></td>
@@ -147,9 +147,10 @@
 
   </table>
   
-    
+
 
   <br>
+  <img src="{{static_url}}\rxsign.png" height="75px" height="75px">
   <br>
   <br>
 
