--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -50,17 +50,17 @@
             {% endfor %}
         {% endif %}
    
-        <div class="login-box"><h4 style="color: #01576d;">LOGIN</h4><hr>
+        <div class="login-box"><h4 style="color: #1dd1a1;">LOGIN</h4><hr>
           
             <form method="POST">
                 {% csrf_token %}
             <label class="lbl-pname" style="margin-top: 20px;">USERNAME</label>
-            <input name="uName" class="value-pname" style="margin-top: 5px;width: 100%;"/>
+            <input name="uName" class="value-pname" style="margin-top: 5px;width: 100%;border: 1px solid #ddd;padding:5px;"/>
             
             <label class="lbl-pname" style="margin-top: 20px;">PASSWORD</label>
-            <input name="pWord" type="PASSWORD" class="value-pname" style="margin-top: 5px;width: 100%;"/>
+            <input name="pWord" type="PASSWORD" class="value-pname" style="margin-top: 5px;width: 100%;border: 1px solid #ddd;padding:5px;"/>
             
-            <button class="btn btn-success w-100 mt-3 mb-3">LOGIN</button>
+            <button class="btn btn-successs w-100 mt-3 mb-3">LOGIN</button>
             </form>
             </div>
       
