--- a/website/templates/patientinfo.html
+++ b/website/templates/patientinfo.html
@@ -1,17 +1,13 @@
 {% extends 'index.html' %}
 {% load custom_tags %}
 
-
 {% block pagetitle %}Patients Information{% endblock pagetitle %}
 {% block content %}
-
-
 
 <div class="info-row1">
   <div class="col1-info">
     <label class="lbl-pname">PATIENT NAME : &nbsp &nbsp </label>
-    <label class="value-pname"
-      >{{patient_record.first_name}} {{patient_record.middle_name}}
+    <label class="value-pname">{{patient_record.first_name}} {{patient_record.middle_name}}
       {{patient_record.last_name }}
     </label>
   </div>
@@ -25,7 +21,10 @@
 <div class="info-row2">
   <div class="detials-container">
     <div class="pdetails-head">
-      <div class="lbl-details"><h3>Details</h3></div><hr>
+      <div class="lbl-details">
+        <h3>Details</h3>
+      </div>
+      <hr>
     </div>
 
     <div class="pdetails-body">
@@ -61,211 +60,281 @@
 
   <div class="details-history">
     <div class="phistory-head">
-      
-     
+
       {% block title %}
-      <div class="lbl-details"><h3>Medical History</h3></div><hr>
-      
-      <div class="add-medication"><a href="{% url "medicalhistorytb" patient_record.id%}"><h4><i class="bi bi-plus-circle-fill"></i></h4></a></div>
+      <div class="lbl-details">
+        <h3>Medical History</h3>
+      </div>
+      <hr>
+
+      <div class="add-medication"><a href="{% url "medicalhistorytb" patient_record.id%}">
+          <h4><i class="bi bi-plus-circle-fill"></i></h4>
+        </a></div>
       {% endblock title %}
       {% block btn-back%}{% endblock  %}
     </div>
 
-            {% block content1 %}
-                 <!--MEDICAL RECORD TABLE-->
-              <div class="medicalhistorytable">
-               
-                {% Medhistory patient_record.patient_code as records %}
-                <table id="table-medications" class="table table-sm table-bordered">
-                  <thead class="table-success">
-                    <th colspan="5" width="65%">Medical History</th>
-                    <th colspan="1">Date/Time Consulted</th>
-                    <th colspan="1">Actions</th>
-                </thead>
-                
-                {% for record in records %}
-                <tr>
-                <td colspan="5" width="65%">{{record.remarks}}
-                  
-                  </td>
-                <td colspan="1">{{record.created_at}}</td>
-                <td colspan="1">
-                  &nbsp <a class="link link-info" href="{% url "medicalhistoryinfo" patient_record.id record.id%}">View</a>
-                  &nbsp <a class="link link-danger" href="{% url "deletemedicalhistory" patient_record.id record.id%}">Delete</a>
-                </td>
-                </tr>
-                {% endfor %}             
-                </table>
-                </div>
-                <!--end of MEDICAL RECORD TABLE-->
+    {% block content1 %}
+    <!--MEDICAL RECORD TABLE-->
+    <div class="medicalhistorytable">
 
-                
-            <div class="phistory-head">
-              <div class="lbl-details"><h3>Medications</h3></div>
+      {% Medhistory patient_record.patient_code as records %}
+      <table id="table-medications" class="table table-sm table-bordered">
+        <thead class="table-success">
+          <th colspan="5" width="65%">Medical History</th>
+          <th colspan="1">Date/Time Consulted</th>
+          <th colspan="1">Actions</th>
+        </thead>
 
-             
+        {% for record in records %}
+        <tr>
+          <td colspan="5" width="65%">{{record.remarks}}
 
-              <div class="add-medication" >
-                <a type="button" data-bs-toggle="modal" data-bs-target="#print_report"><h4><i class="bi bi-printer-fill"></i></h4></a>
-                </div>
-                {% comment %} <a href="{% url "report" patient_record.id %}"><h4><i class="bi bi-printer-fill"></i></h4></a></div> {% endcomment %}
-            </div>
+          </td>
+          <td colspan="1">{{record.created_at}}</td>
+          <td colspan="1">
+            &nbsp <a class="link link-info" href="{% url "medicalhistoryinfo" patient_record.id record.id%}">View</a>
+            &nbsp <a class="link link-danger"
+              href="{% url "deletemedicalhistory" patient_record.id record.id%}">Delete</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
+    <!--end of MEDICAL RECORD TABLE-->
 
-            
-                
-                
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                <div class="accordion-item">
-                  <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      <i class="bi bi-plus-circle-fill"></i> &nbsp Add Item in prescription
-                    </button>
-                  </h2>
-                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
+    <div class="phistory-head">
+      <div class="lbl-details">
+        <h3>Medications</h3>
+      </div>
 
-                      <div class="accordion-item">
-                        <form method="POST" id="additsem-form">
-                          {% csrf_token %}
-                              <div class="reg-row">
-                                <div class="medicine-col" style="width:100%;">
-                                  <label class="reg-label">Medicine Name</label><br />
-                                  <input class="medicine-input" list="medlist" name="medName" required />
-                                  <datalist id="medlist">
-                                    {% for medListItem in medicines_list %}
-                                    <option value="{{medListItem.medicine_name}}">
-                                      {% endfor %}
-                                  </datalist>
-                                </div>
-                              
-
-                                <div class="medicine-col">
-                                  <label class="reg-label">Dosage</label><br />
-                                  <input class="medicine-input" name="dosage" required />
-                                </div>
-
-                                <div class="medicine-col">
-                                  <label class="reg-label">Quantity</label><br />
-                                  <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
-                                </div>
-                            </div>
-                              <br>
-                        <div class="reg-row" style="padding-top:0px">
-                          
-                            <div class="medicine-col">
-                              <label class="reg-label">7AM</label><br />
-                              <input class="medicine-input" name="am" required />
-                            </div>
-
-                            <div class="medicine-col">
-                              <label class="reg-label">1PM</label><br />
-                              <input class="medicine-input" name="noon" required />
-                            </div>
-
-                            <div class="medicine-col">
-                              <label class="reg-label">5PM</label><br />
-                              <input class="medicine-input" name="pmvalue" required />
-                            </div>
-
-                            <div class="medicine-col">
-                             
-                              <button class="btn-addmed" type="submit" name="addtoprescription">add to prescription</button>
-                          
-                            </div>
-                       
-                        </div>
-
-                      </div>
-                    </form>
-                    </div>
-                  </div>
-              
-            
-                
-            
-
-            
-            <!--PATIENT PRESCRIPTION TABLE-->
-            <div class="medicalhistorytable">
-            <table id="table-medications" class="table table-sm table-bordered">
-              <thead class="table-success">
-                <tr>
-                <th rowspan="2">Quantity</th>
-                <th rowspan="2">Medication/Preparation</th>
-                <th rowspan="2">Dosage</th>
-                <th colspan="3">Schedule of Intake</th>
-                <th rowspan="2">Actions</th>
-                </tr>
-                <tr>
-                  <th>7:00 AM</th>
-                  <th>1:00 PM</th>
-                  <th>7:00 PM</th>          
-                  </tr>      
-              </thead>        
-              <tbody>
-                {% if medicationrecord %}        
-                {% for medrecord in medicationrecord %}
-                <tr>
-                <td>{{medrecord.quantity}}</td>
-                <td>{{medrecord.medicine_name}}</td>
-                <td>{{medrecord.dosage}}</td>
-                <td>{{medrecord.morning}}</td>
-                <td>{{medrecord.noon}}</td>
-                <td>{{medrecord.evening}}</td>  
-                <td>
-                 
-                  <a href="{% url "deleteitemprescription" patient_record.id medrecord.id %}" style="padding:0 10px;margin:0;" name="delete_presciption_item" type='submit' value="{{medrecord.id}}" id="link-delete">
-                    <i class="bi bi-trash3"></i></a>
-                
-                </td>
-                </tr>
-                {% endfor %}
-                {% else %}
-                <td colspan="6">No current prescription data.</td>
-                {% endif %}
-              </tbody>
-            </table>    
-            </div>
-            <!--end of PATIENT PRESCRIPTION TABLE-->
-            {% endblock content1 %}
-             
-
-
-    
-
+      <div class="add-medication">
+        <a type="button" data-bs-toggle="modal" data-bs-target="#print_report">
+          <h4><i class="bi bi-printer-fill"></i></h4>
+        
+      </div>
+      {% comment %} <a href="{% url "report" patient_record.id %}">
+        <h4><i class="bi bi-printer-fill"></i></h4>
+      </a>
+    </div> {% endcomment %}
   </div>
+
+  <form method="POST" id="additsem-form">
+    {% csrf_token %}
+    <a class="btn btn-outline-success" style="margin-left:20px;margin-top:10px;"   type="button" data-bs-toggle="modal" data-bs-target="#searchmedicine"><i class="bi bi-search"></i> Search medicine</a>
+    <div class="reg-row">
+      <div class="medicine-col" style="width:100%;">
+
+        {% if medselected %}
+        
+                    <label class="reg-label">Medicine Name</label><br />
+                    <input class="medicine-input" list="medlist" name="medName" value="{{medselected.medicine_name}}" required />
+                    <datalist id="medlist">
+                      {% for medListItem in medicines_list %}
+                      <option value="{{medListItem.medicine_name}}">
+                        {% endfor %}
+                    </datalist>
+                  </div>
+
+                  <div class="medicine-col">
+                    <label class="reg-label">Dosage</label><br />
+                    <input class="medicine-input" name="dosage" value="{{medselected.dosage}}" required />
+                  </div>
+
+                  <div class="medicine-col">
+                    <label class="reg-label">Quantity</label><br />
+                    <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
+                  </div>
+
+        {% else %}
+
+                  <label class="reg-label">Medicine Name</label><br />
+                  <input class="medicine-input" list="medlist" name="medName" required />
+                  <datalist id="medlist">
+                    {% for medListItem in medicines_list %}
+                    <option value="{{medListItem.medicine_name}}">
+                      {% endfor %}
+                  </datalist>
+                </div>
+
+                <div class="medicine-col">
+                  <label class="reg-label">Dosage</label><br />
+                  <input class="medicine-input" name="dosage" required />
+                </div>
+
+                <div class="medicine-col">
+                  <label class="reg-label">Quantity</label><br />
+                  <input class="medicine-input" name="qtyvalue" style="width:80%;" required />
+                </div>
+
+        {% endif %}
+        
+
+
+    </div>
+    <br>
+    <div class="reg-row" style="padding-top:0px">
+
+      <div class="medicine-col">
+        <label class="reg-label">7AM</label><br />
+        <input class="medicine-input" name="am" required />
+      </div>
+
+      <div class="medicine-col">
+        <label class="reg-label">1PM</label><br />
+        <input class="medicine-input" name="noon" required />
+      </div>
+
+      <div class="medicine-col">
+        <label class="reg-label">5PM</label><br />
+        <input class="medicine-input" name="pmvalue" required />
+      </div>
+
+      <div class="medicine-col">
+
+        <button class="btn-addmed btn-success mt-4 p-2" type="submit" name="addtoprescription">add to prescription</button>
+
+      </div>
+
+    </div>
+
+  </form>
+
+  <!--PATIENT PRESCRIPTION TABLE-->
+  <div class="medicalhistorytable">
+    <table id="table-medications" class="table table-sm table-bordered">
+      <thead class="table-success">
+        <tr>
+          <th rowspan="2">Quantity</th>
+          <th rowspan="2">Medication/Preparation</th>
+          <th rowspan="2">Dosage</th>
+          <th colspan="3">Schedule of Intake</th>
+          <th rowspan="2">Actions</th>
+        </tr>
+        <tr>
+          <th>7:00 AM</th>
+          <th>1:00 PM</th>
+          <th>7:00 PM</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% if medicationrecord %}
+        {% for medrecord in medicationrecord %}
+        <tr>
+          <td>{{medrecord.quantity}}</td>
+          <td>{{medrecord.medicine_name}}</td>
+          <td>{{medrecord.dosage}}</td>
+          <td>{{medrecord.morning}}</td>
+          <td>{{medrecord.noon}}</td>
+          <td>{{medrecord.evening}}</td>
+          <td>
+
+            <a href="{% url "deleteitemprescription" patient_record.id medrecord.id %}" style="padding:0 10px;margin:0;"
+              name="delete_presciption_item" type='submit' value="{{medrecord.id}}" id="link-delete">
+              <i class="bi bi-trash3"></i></a>
+
+          </td>
+        </tr>
+        {% endfor %}
+        {% else %}
+        <td colspan="6">No current prescription data.</td>
+        {% endif %}
+      </tbody>
+    </table>
+  </div>
+  <!--end of PATIENT PRESCRIPTION TABLE-->
+  {% endblock content1 %}
+
+</div>
 </div>
 
 <!-- Modal -->
-<div class="modal fade sm" id="print_report" data-bs-backdrop="static" tabindex="-1" aria-labelledby="print_report" aria-hidden="true">
+<div class="modal fade sm" id="print_report" data-bs-backdrop="static" tabindex="-1" aria-labelledby="print_report"
+  aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
 
     <div class="modal-content">
       <div class="title-form">Print Prescription</div>
-      <form action="" method="POST">
+      <form action="" method="POST" target="_blank">
         {% csrf_token %}
-    
-          
-          <div class="form-check m-4">
-            <input name="sigchecked" class="form-check-input" type="checkbox" value="with signature" id="flexCheckChecked" checked>
-            <label class="form-check-label" for="flexCheckChecked">
-              with signature
-            </label>
-          </div>
-         
-     
-       
+
+        <div class="form-check m-4">
+          <input name="sigchecked" class="form-check-input" type="checkbox" value="with signature" id="flexCheckChecked"
+            checked>
+          <label class="form-check-label" for="flexCheckChecked">
+            with signature
+          </label>
+        </div>
 
         <div class="reg-row">
-          <div class="medicine-col">
+          <div class="medicine-col" align="right" style="margin-bottom:15px;">
 
-            <button class="btn-save" type="submit" name="print_prescription">Save</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button class="btn-save" type="submit" name="print_prescription">Print</button>
+            <button style="margin-right:20px;"type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
           </div>
         </div>
       </form>
+    </div>
+
+  </div>
+</div>
+
+<div class="modal fade sm" id="searchmedicine" data-bs-backdrop="static" tabindex="-1" aria-labelledby="print_report"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+
+    <div class="modal-content">
+      <div class="title-form2"><span><i class="bi bi-search"></i> &nbsp Search Medicine</span>
+          &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+           &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+            &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp 
+        <span > <a href="" data-bs-dismiss="modal" class="btn btn-danger btn-sm" >CLOSE</a></span></div>
+      
+      <div class="m-3">
+      
+     
+        <!--MEDICINES TABLE-->
+      <table id="medicine-table" class="medicine-tables">
+        <thead >
+         
+          <th>Medicine Name</th>
+          <th>Dosage</th>
+          <th>Actions</th>
+        </thead>
+        
+        <tbody>
+          {% for meds in medicinedata %}
+          <tr>
+           
+            <td>{{meds.medicine_name}}</td>
+            <td>{{meds.dosage}}</td>           
+            <td id="actions_cell">
+              
+             
+              <form action="{% url "patientinfo" pID meds.id %}" method="POST">
+                {% csrf_token %}
+              <button type='submit' name="select_medicine"  id="link-select">select medicine</button>
+              </form> </td>          
+            </tr>
+            {% endfor %}
+            
+          </tbody>
+       
+        </table>
+        
+       
+      </form>
+  
+    </div>
+  </div>
+  
+
+    
+
     </div>
 
   </div>
